--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.85.0",
+    "@tanstack/react-query-devtools": "^5.85.2",
+    "axios": "^1.11.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "zustand": "^5.0.7"
   },
