--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.85.0",
     "@tanstack/react-query-devtools": "^5.85.2",
     "axios": "^1.11.0",
+    "dompurify": "^3.2.6",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "primeicons": "^7.0.0",
